--- a/src/index.css
+++ b/src/index.css
@@ -108,10 +108,6 @@ body {
   min-height: 100vh;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
 
 button {
   border-radius: 8px;
@@ -141,6 +137,14 @@ button:focus-visible {
 }
 /* Additional styles for your title */
 .title {
+  font-family: 'Mona Sans', -apple-system, BlinkMacSystemFont, 'Segoe UI', Helvetica, Arial, sans-serif;
+  font-feature-settings: 'ss02' on, 'ss01' on;
+  font-weight: 900;
+  letter-spacing: -0.01em;
+  text-align: center;
+}
+
+.nav {
   font-family: 'Mona Sans', -apple-system, BlinkMacSystemFont, 'Segoe UI', Helvetica, Arial, sans-serif;
   font-feature-settings: 'ss02' on, 'ss01' on;
   font-weight: 900;
